--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,9 +1,9 @@
 {% if latest_posts %}
     <ul>
     {% for post in latest_posts %}
-        <li><a href="/blog/{{ post.id }}/">{{ post.text }}</a></li>
+    <li><a href="{% url 'blog:post' post.id %}">{{ post.text }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
-    <p>No polls are available.</p>
+    <p>T-dang it! No blog posts are available.</p>
 {% endif %}
