makefile, bug fixes, and tests

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -5,5 +5,5 @@
     {% endfor %}
     </ul>
 {% else %}
-    <p>T-dang it! No blog posts are available.</p>
+    <p>Nothing is posted</p>
 {% endif %}
