--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -10,6 +10,7 @@
   <p>No post dag yo</p>
 {% endif %}
 {% for t in post.thread_set.all %}
+{% if t.comment_set.count > 0 %}
   <h1>thread</h1>
   <div>
     {% for c in t.comment_set.all %}
@@ -19,13 +20,14 @@
   <form action="{% url 'blog:comment' 1 2 %}" method="post" class="comment-form-hidden">
   {% csrf_token %}
   <fieldset>
-      <legend><h2>Comment on "{{ post.title }}"</h2></legend>
+      <legend><h3>Comment on "{{ post.title }}"</h3></legend>
       {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
       <textarea id="comment" name="comment" required minlength="4" maxlength=1000 rows=8></textarea>
   </fieldset>
   <input type="submit" value="Reply">
   </form>
   <button class=comment-toggle>Reply</button>
+{% endif %}
 {% endfor %}
 
 // todo - add new comment form, need to figure out template subst. or use e.g. react.js
