static files/stylesheets

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,4 +1,5 @@
 {% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'brand.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}">
 {% if latest_posts %}
     <ul>
