--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -5,6 +5,6 @@ a {
   color: #607d8b;
   text-decoration: none;
 }
-body {
+/*body {
     background: white url("images/404-mateo.png") no-repeat;
-}
+}*/
