--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -1,3 +1,6 @@
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'brand.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}">
 {% if post %}
 <h1>{{ post }}<h1>
 <h1>{{ post.title }}</h1>
