--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,12 +1,13 @@
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'brand.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}">
-{% if latest_posts %}
-    <ul>
-    {% for post in latest_posts %}
-    <li><a href="{% url 'blog:post' post.id %}">{{ post.text }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>Nothing is posted</p>
-{% endif %}
+{% extends "base.html" %}
+{% block title %}HELLO?????{% endblock %}
+{% block content %}
+  {% if latest_posts %}
+      <ul>
+      {% for post in latest_posts %}
+      <li><a href="{% url 'blog:post' post.id %}">{{ post.text }}</a></li>
+      {% endfor %}
+      </ul>
+  {% else %}
+      <p>Nothing is posted</p>
+  {% endif %}
+{% endblock %}
