--- a/static/brand.css
+++ b/static/brand.css
@@ -3,8 +3,11 @@
   --brand-secondary: #FEFBE7;
   --brand-tertiary: #DAE5D0;
   --brand-quaternary: #A0BCC2;
+  --font: 'Jura';
 }
 
 body {
-  background-color: var(--brand-primary);
+  background: linear-gradient(0.3turn, var(--brand-secondary), var(--brand-quaternary));
+  font-family: var(--font), sans-serif;
 }
+
