--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,7 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'brand.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jura:wght@300&display=swap" rel="stylesheet">
 
