--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
   {% load static %}
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- bootstrap css -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="{% static 'brand.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,13 +18,21 @@
 </head>
 
 <body>
+
+  <!-- top navigation bar -->
   <div id="top-menu">
-    {% block topmenu %}
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="{% url 'blog:index'%}">Blog</a></li>
-    </ul>
-    {% endblock %}
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">{% block navtitle %}Terra Venusta{% endblock %}</a>
+        <ul class="navbar-nav">
+          {% block topmenu %}
+            <li><a class="dropdown-item" href="/">Home</a></li>
+            <li><a class="dropdown-item" href="{% url 'blog:index'%}">Blog</a></li>
+          {% endblock %}
+        </ul>
+    </div>
+  </nav>
+
   </div>
   <div id="sidebar">
     {% block sidebar %}
@@ -29,6 +43,8 @@
     {% block content %}
     {% endblock %}
   </div>
+  <!-- bootstrap js  -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
