styling and flatpage work

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}HELLO?????{% endblock %}
+{% block title %}Terra Venusta Blog{% endblock %}
 {% block content %}
   {% if latest_posts %}
       <ul>
