--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
     {% endblock %}
   </div>
 
-  <div id="content">
+  <div class="container" id="content">
     {% block content %}
     {% endblock %}
   </div>
