--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- bootstrap css -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
   <link rel="stylesheet" type="text/css" href="{% static 'brand.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,15 +22,44 @@
 
   <!-- top navigation bar -->
   <div id="top-menu">
-  <nav class="navbar navbar-expand-lg">
+  <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">{% block navtitle %}Terra Venusta{% endblock %}</a>
-        <ul class="navbar-nav">
+      <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           {% block topmenu %}
-            <li><a class="dropdown-item" href="/">Home</a></li>
-            <li><a class="dropdown-item" href="{% url 'blog:index'%}">Blog</a></li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="{% url 'blog:index'%}">Blog</a>
+            </li>
+            {% load flatpages %}
+            <!-- services flatpages -->
+            {% get_flatpages '/services/' as services %}
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Services
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              {% for page in services %}
+                <li><a class="dropdown-item" href="{{ page.url }}">{{ page.title }}</a></li>
+              {% endfor %}
+              </ul>
+            </li>
           {% endblock %}
         </ul>
+        <!--
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+        -->
+      </div>
     </div>
   </nav>
 
@@ -43,8 +73,16 @@
     {% block content %}
     {% endblock %}
   </div>
+
+  <div class="container" id="footer">
+    {% block footer %}
+    <h1>footer</h1>
+    {% endblock %}
+  </div>
+
   <!-- bootstrap js  -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
