more libraries and fill out home page

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -4,13 +4,42 @@
 <!-- welcome banner -->  
 <div class="header container-fluid">
   <div class="row">
+    <div class="column text-center">
+      <h2>Terra Venusta Landscaping</h2>
+      <p class="lead">
+      Beautify - Drought Defy - Please the Eye
+      </p>
+    </div>
+  </div>
+  <div class="row">
     <div class="column">
-      <h2>Welcome to Terra Venusta Landscaping</h2>
+      <p>We are a full-service landscaping company focusing on:</p>
+      <ul>
+        <li>permaculture</li>
+        <li>water conservation</li>
+        <li>child-friendly designs</li>
+        <li>native plants</li>
+        <li>greywater irrigation</li>
+        <li>earthen outdoor structures</li>
+      </ul>
+      <p>
+         We analyze your unique situation and create a landscape that is self-repleneshing, drought-tolerant, and 
+         tailored to your style. If you don't follow the status-quo, you found the right landscape designers.</p>
+      </p>
     </div>
   </div>
 </div>
 <!-- blurb about us and what we do -->  
-<p>Terra Venusta is Latin for "beatiful earth."</p>
+<div class="container">
+  <div class="row">
+    <div class="column">
+      <h3>Services</h3>
+      <h3>About Us</h3>
+      <p>Terra Venusta is Latin for "beatiful earth."</p>
+      <h3>Ready to get started? We make it easy; schedule your appointment without a phone call!<h3>
+    </div>
+  </div>
+</div>
 <!-- link to quote page -->  
 <!-- services -->  
 <!-- blog -->  
