--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
   <div id="top-menu">
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">{% block navtitle %}Terra Venusta{% endblock %}</a>
+      <a class="navbar-brand" href="/">{% block navtitle %}Terra Venusta{% endblock %}</a>
       <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
