more work on home page

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -7,12 +7,12 @@
     <div class="column text-center">
       <h2>Terra Venusta Landscaping</h2>
       <p class="lead">
-      Beautify - Drought Defy - Please the Eye
+        Beautiful and Functional Outdoor Spaces
       </p>
     </div>
   </div>
   <div class="row">
-    <div class="column">
+    <div class="col-md-8 offset-md-2">
       <p>We are a full-service landscaping company focusing on:</p>
       <ul>
         <li>permaculture</li>
@@ -26,13 +26,16 @@
          We analyze your unique situation and create a landscape that is self-repleneshing, drought-tolerant, and 
          tailored to your style. If you don't follow the status-quo, you found the right landscape designers.</p>
       </p>
+      <p>
+        We live in Ventura County and serve most or all of Ventura, Santa Barbara, and Los Angeles counties.
+      </p>
     </div>
   </div>
 </div>
 <!-- blurb about us and what we do -->  
 <div class="container">
   <div class="row">
-    <div class="column">
+    <div class="col-md-8 offset-md-2">
       <h3>Services</h3>
       <h3>About Us</h3>
       <p>Terra Venusta is Latin for "beatiful earth."</p>
