keep fluffing up content and migrate to wagtail

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -5,7 +5,7 @@
 <div class="header container-fluid">
   <div class="row">
     <div class="column text-center">
-      <h2>Terra Venusta Landscaping</h2>
+      <h2>Terra Venusta Landscaping Blog</h2>
       <p class="lead">
         Beautiful and Functional Outdoor Spaces
       </p>
@@ -13,7 +13,8 @@
   </div>
   <div class="row">
     <div class="col-md-8 offset-md-2">
-      <p>We are a full-service landscaping company focusing on:</p>
+      <p>Hi! I'm Xenia Froelich-Leon, an aspiring landscape developer. Eventually this website will turn into my business site. For now, I'll use it to publish content as I go along my path.</p>
+      <p>I am building a full-service landscaping company focusing on:</p>
       <ul>
         <li>permaculture</li>
         <li>water conservation</li>
@@ -23,11 +24,7 @@
         <li>earthen outdoor structures</li>
       </ul>
       <p>
-         We analyze your unique situation and create a landscape that is self-repleneshing, drought-tolerant, and 
-         tailored to your style. If you don't follow the status-quo, you found the right landscape designers.</p>
-      </p>
-      <p>
-        We live in Ventura County and serve most or all of Ventura, Santa Barbara, and Los Angeles counties.
+        I live in Ventura County, California.
       </p>
     </div>
   </div>
@@ -36,10 +33,9 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 offset-md-2">
-      <h3>Services</h3>
-      <h3>About Us</h3>
+      <h3>Projects</h3>
+      <h3>About</h3>
       <p>Terra Venusta is Latin for "beatiful earth."</p>
-      <h3>Ready to get started? We make it easy; schedule your appointment without a phone call!<h3>
     </div>
   </div>
 </div>
