--- a/cmsblog/templates/cmsblog/post.html
+++ b/cmsblog/templates/cmsblog/post.html
@@ -1,22 +1,25 @@
 {% extends "base.html" %}
-{% block title %}{{ post.title }}{% endblock %}
+{% load wagtailcore_tags %}
+{% block title %}{{ page.title }}{% endblock %}
 {% block content %}
-  {% if post %}
+{% if page %}
 <div class="container">
-  <h1>{{ post.title }}</h1>
-  <p>published {{ post.pub_date }}</p>
-  {% if post.pub_date != post.edit_date %}
-  <p>updated {{ post.edit_date }}</p>
-  {% endif %}
-  <p>{{ post.text }}</p>
-  {% else %}
-    <p>No post dag yo</p>
-  {% endif %}
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+    <h1>{{ page.title }}</h1>
+    {% if page.should_display_updated == True %}
+      <p>updated {{ page.edit_date|date:"SHORT_DATE_FORMAT" }}</p>
+    {% endif %}
+    <p>published {{ page.pub_date|date:"SHORT_DATE_FORMAT" }}</p>
+        {% include_block page.body %}
+    {% else %}
+      <p>No page dag yo</p>
+    {% endif %}
   <h2>Comments</h2>
   <div>
-    {% include 'blog/comment_response.html' with form_id="new_comment" post_id=post.pk thread_id="new" form_class="collapse show" %}
+    {% include 'cmsblog/comment_response.html' with form_id="new_comment" post_id=page.id thread_id="new" form_class="collapse show" %}
   </div>
-  {% for t in post.thread_set.all %}
+  {% for t in page.thread_set.all %}
   {% if t.comment_set.count > 0 %}
     <div>
       {% for c in t.comment_set.all %}
@@ -29,11 +32,13 @@
       <p>{{ c.comment_text }}</p>
       {% endfor %}
       <div>
-        {% include 'blog/comment_response.html' with form_id=t.chain_id post_id=post.pk thread_id=t.pk form_class="collapse" %}
+        {% include 'cmsblog/comment_response.html' with form_id=t.chain_id post_id=page.id thread_id=t.pk form_class="collapse" %}
       </div>
     </div>
   {% endif %}
   {% endfor %}
+    </div>
+  </div>
 </div>
 <!-- <script>
   // TODO move
