--- a/templates/base.html
+++ b/templates/base.html
@@ -69,16 +69,42 @@
     {% endblock %}
   </div>
 
-  <div class="container" id="content">
+  <div class="container py-md-3" id="content">
     {% block content %}
     {% endblock %}
   </div>
 
-  <div class="container" id="footer">
-    {% block footer %}
-    <h1>footer</h1>
+  {% block footer %}
+    <div class="container-fluid" id="footer">
+      <div class="row p-md-4">
+        <div class="col-md-4 offset-md-1">
+          <p>Terra Venusta is a family-owned landscaping and permaculture landscape design group</p>
+          <p>&copy; 2022 Terra Venusta</p>
+        </div>
+        <div class="col-md-2">
+          <h4>About</h4>
+          <ul class="no-bullets">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Privacy</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2">
+          <h4>What We Do</h4>
+          <ul class="no-bullets">
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Blog</a></li>
+        </div>
+        <div class="col-md-2">
+          <h4>Get Started</h4>
+          <ul class="no-bullets">
+            <li><a href="#">more links</a></li>
+            <li><a href="#">more links</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
     {% endblock %}
-  </div>
 
   <!-- bootstrap js  -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
