--- a/cmsblog/templates/cmsblog/index.html
+++ b/cmsblog/templates/cmsblog/index.html
@@ -4,7 +4,7 @@
   {% if latest_posts %}
       <ul>
       {% for post in latest_posts %}
-      <li><a href="{% url 'blog:post' post.id %}">{{ post.text }}</a></li>
+      <li><a href="{% url 'blog:post' post.id %}">{{ post }}</a></li>
       {% endfor %}
       </ul>
   {% else %}
