--- a/source/stylesheets/brand.scss
+++ b/source/stylesheets/brand.scss
@@ -2,14 +2,18 @@
 @import "../../node_modules/bootstrap/scss/functions";
 
 // 2. Include any default variable overrides here
-$brand-primary:     #F9EBC8;
+$brand-primary:     #DAE5D0;
 $brand-secondary:   #FEFBE7;
-$brand-tertiary:    #DAE5D0;
+$brand-tertiary:    #F9EBC8;
 $brand-quaternary:  #A0BCC2;
 $brand-font:        'Jura', sans-serif;
 
+//$btn-border-radius:           $border-radius !default;
 //$body-bg: black;
+//$btn-bg: $brand-primary;
+//$bs-btn-bg: black;
 $primary:       $brand-primary;
+$blue:          $brand-primary;
 $secondary:     $brand-secondary;
 //$success:       
 //$info:          black;
@@ -17,37 +21,85 @@ $secondary:     $brand-secondary;
 //$danger:        black;
 $light:         $brand-tertiary;
 //$dark:          black;
+$font-family: $brand-font;
+$font-family-sans-serif:      $brand-font;
+
 
 // 3. Include remainder of required Bootstrap stylesheets
 @import "../../node_modules/bootstrap/scss/variables";
 
 // 4. Include any default map overrides here
+$custom-theme-colors:map-merge($theme-colors, (
+  "tertiary": $brand-tertiary,
+  "quaternary": $brand-quaternary
+));
 
-// 5. Include remainder of required parts
+$theme-colors: map-merge($theme-colors, $custom-theme-colors);
+$theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
+
+//////////////////////////////////////////////////////////
+// from bootstrap.scss
+//////////////////////////////////////////////////////////
+@import "../../node_modules/bootstrap/scss/mixins/banner";
+@include bsBanner("");
+
+
+// scss-docs-start import-stack
+// Configuration
+//@import "../../node_modules/bootstrap/scss/functions";
+//@import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/maps";
 @import "../../node_modules/bootstrap/scss/mixins";
-@import "../../node_modules/bootstrap/scss/root";
-
-// 6. Optionally include any other parts as needed
 @import "../../node_modules/bootstrap/scss/utilities";
+
+// Layout & components
+@import "../../node_modules/bootstrap/scss/root";
 @import "../../node_modules/bootstrap/scss/reboot";
 @import "../../node_modules/bootstrap/scss/type";
 @import "../../node_modules/bootstrap/scss/images";
 @import "../../node_modules/bootstrap/scss/containers";
 @import "../../node_modules/bootstrap/scss/grid";
+@import "../../node_modules/bootstrap/scss/tables";
+@import "../../node_modules/bootstrap/scss/forms";
+@import "../../node_modules/bootstrap/scss/buttons";
+@import "../../node_modules/bootstrap/scss/transitions";
+@import "../../node_modules/bootstrap/scss/dropdown";
+@import "../../node_modules/bootstrap/scss/button-group";
+@import "../../node_modules/bootstrap/scss/nav";
+@import "../../node_modules/bootstrap/scss/navbar";
+@import "../../node_modules/bootstrap/scss/card";
+@import "../../node_modules/bootstrap/scss/accordion";
+@import "../../node_modules/bootstrap/scss/breadcrumb";
+@import "../../node_modules/bootstrap/scss/pagination";
+@import "../../node_modules/bootstrap/scss/badge";
+@import "../../node_modules/bootstrap/scss/alert";
+@import "../../node_modules/bootstrap/scss/progress";
+@import "../../node_modules/bootstrap/scss/list-group";
+@import "../../node_modules/bootstrap/scss/close";
+@import "../../node_modules/bootstrap/scss/toasts";
+@import "../../node_modules/bootstrap/scss/modal";
+@import "../../node_modules/bootstrap/scss/tooltip";
+@import "../../node_modules/bootstrap/scss/popover";
+@import "../../node_modules/bootstrap/scss/carousel";
+@import "../../node_modules/bootstrap/scss/spinners";
+@import "../../node_modules/bootstrap/scss/offcanvas";
+@import "../../node_modules/bootstrap/scss/placeholders";
+
+// Helpers
 @import "../../node_modules/bootstrap/scss/helpers";
 
-// 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
+// Utilities
 @import "../../node_modules/bootstrap/scss/utilities/api";
+// scss-docs-end import-stack
 
 // custom css
 body {
   /*background: linear-gradient(0.3turn, var(--brand-secondary), var(--brand-quaternary));*/
-  font-family: $brand-font;
+  //font-family: $brand-font; // no effect, need to override bootstrap variable instead
 }
 
 #top-menu {
-  background: blue;
+  background: linear-gradient(90deg, $brand-primary 0%, $brand-tertiary 100%) !important;
 }
 
 #footer {
@@ -59,3 +111,4 @@ ul.no-bullets {
   padding: 0; /* Remove padding */
   margin: 0; /* Remove margins */
 }
+
