--- a/registration/templates/registration/password_reset_confirm.html
+++ b/registration/templates/registration/password_reset_confirm.html
@@ -1,14 +1,7 @@
-{% extends "admin/base_site.html" %}
-{% load i18n static %}
+{% extends "base.html" %}
+{% load i18n %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" href="{% static "admin/css/forms.css" %}">{% endblock %}
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
-&rsaquo; {% translate 'Password reset confirmation' %}
-</div>
-{% endblock %}
-
+{% block title %}{% translate 'Set a new password' %}{% endblock %}
 {% block content %}
 
 {% if validlink %}
@@ -17,18 +10,18 @@
 
 <form method="post">{% csrf_token %}
 <fieldset class="module aligned">
-    <input class="hidden" autocomplete="username" value="{{ form.user.get_username }}">
-    <div class="form-row field-password1">
+    <input class="visually-hidden" autocomplete="username" value="{{ form.user.get_username }}">
+    <div class="mb-3">
         {{ form.new_password1.errors }}
         <label for="id_new_password1">{% translate 'New password:' %}</label>
         {{ form.new_password1 }}
     </div>
-    <div class="form-row field-password2">
+    <div class="mb-3">
         {{ form.new_password2.errors }}
         <label for="id_new_password2">{% translate 'Confirm password:' %}</label>
         {{ form.new_password2 }}
     </div>
-    <input type="submit" value="{% translate 'Change my password' %}">
+    <input class="btn btn-primary" type="submit" value="{% translate 'Change my password' %}">
 </fieldset>
 </form>
 
