--- a/registration/templates/registration/password_reset_done.html
+++ b/registration/templates/registration/password_reset_done.html
@@ -1,12 +1,7 @@
-{% extends "admin/base_site.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
-&rsaquo; {% translate 'Password reset' %}
-</div>
-{% endblock %}
+{% block title %}{% translate 'Password reset' %}{% endblock %}
 
 {% block content %}
 
