--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,6 @@
 <body>
 
   <!-- top navigation bar -->
-  <div >
   <nav id="top-menu" class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">{% block navtitle %}Terra Venusta{% endblock %}</a>
@@ -27,14 +26,15 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
+      {% block topmenu %}
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          {% block topmenu %}
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="{% url 'blog:index'%}">Blog</a>
+              <a class="nav-link active" href="{% url 'blog:index' %}">Blog</a>
+            </li>
             </li>
             {% load flatpages %}
             <!-- services flatpages -->
@@ -49,8 +49,14 @@
               {% endfor %}
               </ul>
             </li>
-          {% endblock %}
-        </ul>
+          </ul>
+          <div class="d-flex nav-item">
+            {% if user.is_authenticated %}
+              <a class="nav-link active" href="{% url 'logout' %}">Log Out</a>
+            {% else %}
+              <a class="nav-link active" href="{% url 'login' %}">Log In or Sign Up</a>
+            {% endif %}
+          </div>
         <!--
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -58,10 +64,10 @@
         </form>
         -->
       </div>
+      {% endblock %}
     </div>
   </nav>
 
-  </div>
   <div id="sidebar">
     {% block sidebar %}
     {% endblock %}
