--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,8 @@
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="{% url 'blog:index' %}">Blog</a>
+{% load wagtailcore_tags %}
+              <a class="nav-link active" href="{% slugurl 'blog' %}">Blog</a>
             </li>
             </li>
             {% load flatpages %}
