--- a/registration/templates/registration/password_reset_done.html
+++ b/registration/templates/registration/password_reset_done.html
@@ -7,6 +7,6 @@
 
 <p>{% translate 'We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.' %}</p>
 
-<p>{% translate 'If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.' %}</p>
+<p>{% translate 'If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder. As a security measure, we don’t report errors if your information was invalid. This prevents information leaks.' %}</p>
 
 {% endblock %}
