ui improvements and comment formatting fixes

--- a/cmsblog/templates/cmsblog/blog_post.html
+++ b/cmsblog/templates/cmsblog/blog_post.html
@@ -11,35 +11,39 @@
     <div class="col-md-8 offset-md-2">
     <h1>{{ page.title }}</h1>
       {% if page.should_display_updated == True %}
-        <p>updated {{ page.edit_date|date:"SHORT_DATE_FORMAT" }}</p>
+        <p>updated {{ page.last_published_at|date:"SHORT_DATE_FORMAT" }}</p>
       {% endif %}
-      <p>published {{ page.pub_date|date:"SHORT_DATE_FORMAT" }}</p>
+        <p>published {{ page.first_published_at|date:"SHORT_DATE_FORMAT" }}</p>
 {% include_block page.body %}
 {% else %}
       <p>No page dag yo</p>
 {% endif %}
   <h2>Comments</h2>
-  <div>
-    {% include 'cmsblog/comment_response.html' with form_id="new_comment" post_id=page.id thread_id="new" form_class="collapse show" %}
-  </div>
-  {% for t in page.thread_set.all %}
-  {% if t.comment_set.count > 0 %}
-    <div>
-      {% for c in t.comment_set.all %}
-      <p>
-        {{ c.author|default:"anonymous" }}
-        wrote on {{ c.pub_date }} 
-        {% if c.edit_date != c.edit_date %} 
-        edited on {{ c.edit_date }} {% endif %}
-      </p>
-      <p>{{ c.comment_text }}</p>
-      {% endfor %}
-      <div>
-        {% include 'cmsblog/comment_response.html' with form_id=t.chain_id post_id=page.id thread_id=t.pk form_class="collapse" %}
+  <div class="container border-top py-3">
+    {% include 'cmsblog/comment_response.html' with form_id=t.chain_id post_id=page.id thread_id="new" form_class="collapse show" mode="comment" %}
+    {% for t in page.thread_set.all %}
+      {% if t.comment_set.count > 0 %}
+      <div class="my-3 p-3 border-start">
+        {% for c in t.comment_set.all %}
+          <p> 
+            {{ c.comment_text }} 
+            - <span class="fw-bold"> {{ c.owner|default:"anonymous" }} </span>
+              <span class="text-muted"> 
+              {{ c.last_published_at }} 
+              {% if c.edited %} 
+                <!-- pencil edit icon -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+  <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+</svg>
+              {% endif %}
+            </span> 
+          </p>
+        {% endfor %}
+        {% include 'cmsblog/comment_response.html' with form_id=t.chain_id post_id=page.id thread_id=t.pk form_class="collapse" mode="reply" %}
+          {% endif %}
       </div>
-    </div>
-  {% endif %}
-  {% endfor %}
+        {% endfor %}
+      </div>
     </div>
   </div>
 </div>
