--- a/source/stylesheets/brand.scss
+++ b/source/stylesheets/brand.scss
@@ -13,14 +13,13 @@ $brand-font:        'Jura', sans-serif;
 //$btn-bg: $brand-primary;
 //$bs-btn-bg: black;
 $primary:       $brand-primary;
-$blue:          $brand-primary;
 $secondary:     $brand-secondary;
 //$success:       
 //$info:          black;
 //$warning:       black;
 //$danger:        black;
 $light:         $brand-tertiary;
-//$dark:          black;
+$dark:          $brand-quaternary;
 $font-family: $brand-font;
 $font-family-sans-serif:      $brand-font;
 
@@ -94,7 +93,6 @@ $theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
 
 // custom css
 body {
-  /*background: linear-gradient(0.3turn, var(--brand-secondary), var(--brand-quaternary));*/
   //font-family: $brand-font; // no effect, need to override bootstrap variable instead
 }
 
@@ -112,3 +110,5 @@ ul.no-bullets {
   margin: 0; /* Remove margins */
 }
 
+// TODO: use gulp and icon fonts
+// TODO: @import "../../node_modules/bootstrap-icons/font/bootstrap-icons";
