--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
     <div class="container-fluid" id="footer">
       <div class="row p-md-4">
         <div class="col-md-4 offset-md-1">
-          <p>Terra Venusta is a family-owned landscaping and permaculture landscape design group</p>
+          <p>Terra Venusta is a woman-owned landscaping and permaculture landscape design group</p>
           <p>&copy; 2022 Terra Venusta</p>
         </div>
         <div class="col-md-2">
