--- a/cmsblog/templates/cmsblog/comment_response.html
+++ b/cmsblog/templates/cmsblog/comment_response.html
@@ -1,9 +1,9 @@
 <div class="container">
   {% if not user.is_authenticated %}
-  <a href="{% url 'register' %}">Register</a> or <a href="{% url 'login' %}">Log in</a> to {{ mode }}
+  <a href="{% url 'register' %}" class="link-dark">Register</a> or <a href="{% url 'login' %}" class="link-dark">Log in</a> to {{ mode }}
   {% else %}
     {% if mode == 'reply' %}
-      <button class="btn btn-link" type="button" data-bs-toggle="collapse" 
+      <button class="btn btn-primary" type="button" data-bs-toggle="collapse" 
         data-bs-target="#{{ form_id }}" aria-expanded="false" aria-controls={{ form_id }}>
         Reply
       </button>
