--- a/cmsblog/templates/cmsblog/comment_response.html
+++ b/cmsblog/templates/cmsblog/comment_response.html
@@ -1,10 +1,34 @@
 <div class="container">
+  {% if comment %}
+    <p id="{{ c.text_target }}"> 
+      <span class="{{c.text_target}}">
+        {{ comment.comment_text }} 
+      </span>
+      - <span class="fw-bold"> {{ c.owner|default:"anonymous" }} </span>
+        <span class="text-muted"> 
+        {{ comment.last_published_at }} 
+        {% if comment.edited %} 
+          <!-- pencil edit icon -->
+          <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+<path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+</svg>
+        {% endif %}
+      </span> 
+      {% if user.is_authenticated and user == c.owner %}
+        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" 
+          data-bs-target="#{{ form_id }}" aria-expanded="false" aria-controls="{{ form_id }}">
+          Edit
+        </button>
+        <button class="btn btn-secondary comment-delete">Delete</button>
+      {% endif %}
+    </p>
+  {% endif %}
   {% if not user.is_authenticated %}
   <a href="{% url 'register' %}" class="link-dark">Register</a> or <a href="{% url 'login' %}" class="link-dark">Log in</a> to {{ mode }}
   {% else %}
     {% if mode == 'reply' %}
       <button class="btn btn-primary" type="button" data-bs-toggle="collapse" 
-        data-bs-target="#{{ form_id }}" aria-expanded="false" aria-controls={{ form_id }}>
+        data-bs-target="#{{ form_id }}" aria-expanded="false" aria-controls="{{ form_id }}">
         Reply
       </button>
     {% endif %}
@@ -17,9 +41,10 @@
         {% endif %}
         <label for="{{ form_id }}_text" class="form-label">Your comment</label>
         <textarea id="{{ form_id }}_text" class="form-control" 
-          name="comment" required minlength="4" maxlength=1000 rows=5></textarea>
+          name="comment" required minlength="4" maxlength=1000 rows=5>{{ comment.comment_text }}</textarea>
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
+      <input type="hidden" name="comment_pk" value="{{ comment.pk }}">
     </form>
   {% endif %}
 </div>
